# unsupervised-hyperspectral-nerf

./: .gitignore  README.md  endmembers_hotdog.npy  nerfstudioa100_environment.yml  pyproject.toml  remote.sh  requirements.txt  train.sh  viewer.sh
data/: adapt_transforms.py  add_val.py  convert_rgb.py  explore.py  load_real.py  plot_curve_spectorgb.py  spec2rgb.py
data/basil/: image_filename_map.json  transforms.json  transforms_bak.json  transforms_train.json
data/basil/colmap/sparse/0/: project.ini
scripts/: ajar.sh  anacampseros.sh  basil.sh  caladium.sh  cbox_dragon.sh  cbox_sphere.sh  hotdog.sh  instantngp.sh  nerfacto.sh  pinecone.sh  render.sh  rgb+spectral.sh  rgb.sh  rosemary.sh  spectral.sh
scripts/visualize/: ajar.sh  anacampseros.sh  caladium.sh  hotdog.sh
umhsnerf/: ignore.py  seg_field.py  umhs_config.py  umhs_field.py  umhs_model.py  umhs_pipeline.py  umhs_renderer.py
umhsnerf/data/: umhs_datamanager.py  umhs_dataparser.py
umhsnerf/data/utils/: dino_dataloader.py  hs_dataloader.py  vca.py
umhsnerf/utils/: clusterprobe.py  hooks.py  metrics.py  spec_to_rgb.py
