[project]
name = "umhs"
description = "UMHS."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["umhsnerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
umhsnerf = 'umhsnerf.umhs_config:umhs_method'